--- a/R_Tutorial.qmd
+++ b/R_Tutorial.qmd
@@ -5,6 +5,7 @@ format:
     toc: true
     toc-location: left
     toc-title: "Contents"
+    embed-resources: true
 execute:
   warning: false
   message: false
